# ViCapsid

src/: pyproject.toml
src/SSFN/: model.py
src/capsidpred/: HMM2H3M.py  Main_predictor.py  Preprocess.py  SelectCluster.py  ViCapsid.py  __init__.py  cli.py  data_loader.py  emb_from_esm_refactored.py  gene_abundance.py  metagene_predict.py  mmseqs_nr.py  predict_from_tfrecord_batch.py  pyhmmersearch.py  tfrecord_generator.py
